Web Inspector: console.count() shouldn't show a colon in front of a number https://bugs.webkit.org/show_bug.cgi?id=152038

Patch by Johan K. Jensen <jj@johanjensen.dk> on 2016-01-11
Reviewed by Brian Burg.

Source/JavaScriptCore:

* inspector/agents/InspectorConsoleAgent.cpp:
(Inspector::InspectorConsoleAgent::count):
Do not include title and colon if the title is empty.

LayoutTests:

* inspector/console/console-api-expected.txt:
* inspector/console/console-api.html:
Add testcases for console.count

Canonical link: https://commits.webkit.org/171091@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194887 268f45cc-cd09-0410-ab3c-d52691b4dbfc